# obadgen

./: .gitignore  Cargo.lock.license  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: cert_gen.rs  key_testing.rs  res_gen.rs
res/media/img/: test.svg.license
res/ob-ents/: badge-assertion-simple.json  badge-assertion-with-key.json  badge-definition-simple.json  badge-definition-with-key.json  issuer-key.cert.der  issuer-key.cert.pem  issuer-key.json  issuer-key.priv  issuer-key.priv.der  issuer-key.priv.pem  issuer-key.pub  issuer-simple.json  issuer-with-key.json  issuer-with-key.json.license  key.json
run/: keys_tester
src/: box_err.rs  cert_gen.rs  constants.rs  environment.rs  hash.rs  lib.rs  logger.rs  main.rs  open_badge.rs  process.rs  serde_date_time.rs  settings.rs  signature.rs  signature_jsonwebtoken.rs  signature_jws.rs  std_error.rs
src/objects/: assertion.rs  badge_class.rs  criteria.rs  cryptographic_key.rs  evidence.rs  identity.rs  issuer.rs  mod.rs  verification.rs
src/patcher/: mod.rs  png.rs  svg.rs
src/util/: defaults.rs  mod.rs  serde_date_time.rs  test.rs
