# SPDX-FileCopyrightText: 2023 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "obadgen"
version = "0.1.0"
edition = "2021"
description = """
    Generates (aka "bakes") basic Open Badge annotated images (lib & CLI-tool).
    """
repository = "https://github.com/hoijui/obadgen"
keywords = ["cli", "open-badges"]
categories = ["command-line-utilities", "open-badges", "generator"]
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
publish = false

[dependencies]
biscuit = "0.7"
chrono = "0.4"
clap = { version = "4.0", features = ["cargo", "derive"] }
# cli-utils = { version = "0.5", git = "https://github.com/hoijui/cli-utils-rs.git" }
const_format = "0.2"
git-version = "0.3"
# human-panic = "1.0"
lazy_static = "1.4"
log = "0.4"
monostate = "0.1"
# HACK We use this until Lukass patch is merged upstream
png = { git = "https://github.com/DeniseBryson/image-png.git" }
# png = "0.17"
rcgen = "0.11"
ring = "0.17"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3" }
typed-builder = "0.18"
xml = "0.8"

[dev-dependencies]
# rcgen = "0.11"
