# SPDX-FileCopyrightText: 2023-2025 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "obadgen"
version = "0.2.2"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """Generates (aka "bakes") basic Open Badge annotated images (lib & CLI-tool)."""
repository = "https://github.com/hoijui/obadgen"
homepage = "https://github.com/hoijui/obadgen"
keywords = ["cli", "utility", "open-badge"]
categories = ["command-line-utilities", "text-processing", "multimedia::images"]
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
# shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"

[dependencies]
biscuit = "0.7"
chrono = "0.4"
clap = { version = "4.0", features = ["cargo", "derive"] }
const_format = "0.2"
ecdsa = "0.16"
git-version = "0.3"
k256 = "0.13"
# human-panic = "1.0"
lazy_static = "1.4"
log = "0.4"
monostate = "0.1"
p256 = "0.13"
p384 = "0.13"
# HACK We use this until Lukass patch is merged upstream
png = { git = "https://github.com/image-rs/image-png.git", commit = "acab1e6" }
# png = "0.17"
rcgen = "0.13"
ring = "0.17"
rsa = "0.9"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3" }
typed-builder = "0.20"
xml = "0.8"

[dev-dependencies]
env_logger = "0.11"
# rcgen = "0.13"
